# caseforge-expert

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
caseforge/: cli.py  config_explainer.py  config_inspector.py  generator.py  history_explorer.py  monitor.py  report.py  system_check.py  validators.py
caseforge/templates/: generic.cfg.j2
templates/: nozzle_euler.cfg.j2
tests/: test_explainer.py  test_generator.py  test_generic_generator.py  test_history_explorer.py  test_inspector.py  test_monitor.py  test_validator.py
