[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caseforge"
version = "0.1.0"
description = "Beginner-friendly SU2 case generator, explainer, monitor, and report tool for aerospace CFD."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sahil Chaudhary" }
]
license = { text = "MIT" }
keywords = ["CFD", "SU2", "aerospace", "mesh", "simulation", "CLI"]
dependencies = [
    "typer",
    "rich",
    "jinja2",
    "pandas",
    "matplotlib"
]

[project.scripts]
caseforge = "caseforge.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["caseforge*"]

[tool.setuptools.package-data]
caseforge = ["templates/*.j2"]

[project.optional-dependencies]
dev = [
    "pytest"
]