[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caseforge-expert"
version = "0.1.0"
description = "Advanced SU2 workflow analytics toolkit for history exploration, convergence diagnosis, plotting, and expert reporting."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sahil Chaudhary" }
]
license = { text = "MIT" }
keywords = ["CFD", "SU2", "aerospace", "mesh", "simulation", "CLI"]
dependencies = [
    "typer",
    "rich",
    "jinja2",
    "pandas",
    "matplotlib"
]

[project.scripts]
caseforge = "caseforge.cli:main"
caseforge-expert = "caseforge.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["caseforge*"]

[tool.setuptools.package-data]
caseforge = ["templates/*.j2"]

[project.optional-dependencies]
dev = [
    "pytest"
]